# Explore-CrewAI

./: README.md
firstresearchcrew/: README.md  pyproject.toml  report.md
firstresearchcrew/src/firstresearchcrew/: crew.py  main.py
