[project]
name = "firstresearchcrew"
version = "0.1.0"
description = "firstresearchcrew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.201.1,<1.0.0"
]

[project.scripts]
firstresearchcrew = "firstresearchcrew.main:run"
run_crew = "firstresearchcrew.main:run"
train = "firstresearchcrew.main:train"
replay = "firstresearchcrew.main:replay"
test = "firstresearchcrew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
